--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -119,8 +119,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "plagiarism-detection-project/sagemaker-pytorch-2020-09-13-06-33-58-268/debug-output/training_job_end.ts\n",
+      "plagiarism-detection-project/sagemaker-pytorch-2020-09-13-06-33-58-268/output/model.tar.gz\n",
       "plagiarism-detection-project/test.csv\n",
       "plagiarism-detection-project/train.csv\n",
+      "sagemaker-pytorch-2020-09-13-06-19-31-395/source/sourcedir.tar.gz\n",
+      "sagemaker-pytorch-2020-09-13-06-24-14-128/sourcedir.tar.gz\n",
+      "sagemaker-pytorch-2020-09-13-06-28-28-687/source/sourcedir.tar.gz\n",
+      "sagemaker-pytorch-2020-09-13-06-33-58-268/source/sourcedir.tar.gz\n",
+      "sagemaker-pytorch-2020-09-13-06-39-10-661/sourcedir.tar.gz\n",
       "Test passed!\n"
      ]
     }
@@ -183,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -467,33 +474,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-09-13 06:33:58 Starting - Starting the training job...\n",
-      "2020-09-13 06:34:00 Starting - Launching requested ML instances......\n",
-      "2020-09-13 06:35:21 Starting - Preparing the instances for training.........\n",
-      "2020-09-13 06:36:40 Downloading - Downloading input data...\n",
-      "2020-09-13 06:37:04 Training - Downloading the training image...\n",
-      "2020-09-13 06:37:57 Training - Training image download completed. Training in progress..\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
+      "2020-09-13 06:49:55 Starting - Starting the training job...\n",
+      "2020-09-13 06:49:57 Starting - Launching requested ML instances......\n",
+      "2020-09-13 06:51:22 Starting - Preparing the instances for training.........\n",
+      "2020-09-13 06:52:37 Downloading - Downloading input data...\n",
+      "2020-09-13 06:52:59 Training - Downloading the training image...\n",
+      "2020-09-13 06:53:56 Training - Training image download completed. Training in progress..\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
       "\u001b[34mbash: no job control in this shell\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:37:58,999 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:37:59,027 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:38:00,474 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:38:00,733 sagemaker-containers INFO     Module train does not provide a setup.py. \u001b[0m\n",
+      "\u001b[34m2020-09-13 06:53:56,897 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
+      "\u001b[34m2020-09-13 06:53:56,924 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
+      "\u001b[34m2020-09-13 06:53:59,952 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
+      "\u001b[34m2020-09-13 06:54:00,182 sagemaker-containers INFO     Module train does not provide a setup.py. \u001b[0m\n",
       "\u001b[34mGenerating setup.py\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:38:00,733 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:38:00,734 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:38:00,734 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
+      "\u001b[34m2020-09-13 06:54:00,182 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
+      "\u001b[34m2020-09-13 06:54:00,182 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
+      "\u001b[34m2020-09-13 06:54:00,182 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
       "\u001b[34m/usr/bin/python -m pip install -U . \u001b[0m\n",
       "\u001b[34mProcessing /opt/ml/code\u001b[0m\n",
       "\u001b[34mBuilding wheels for collected packages: train\n",
       "  Running setup.py bdist_wheel for train: started\u001b[0m\n",
       "\u001b[34m  Running setup.py bdist_wheel for train: finished with status 'done'\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-zwn9k7jk/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-wqn7lfxv/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
       "\u001b[34mSuccessfully built train\u001b[0m\n",
       "\u001b[34mInstalling collected packages: train\u001b[0m\n",
       "\u001b[34mSuccessfully installed train-1.0.0\u001b[0m\n",
       "\u001b[34mYou are using pip version 18.1, however version 20.2.3 is available.\u001b[0m\n",
       "\u001b[34mYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:38:03,016 sagemaker-containers INFO     Invoking user script\n",
+      "\u001b[34m2020-09-13 06:54:02,144 sagemaker-containers INFO     Invoking user script\n",
       "\u001b[0m\n",
       "\u001b[34mTraining Env:\n",
       "\u001b[0m\n",
@@ -523,11 +530,11 @@
       "    },\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
       "    \"is_master\": true,\n",
-      "    \"job_name\": \"sagemaker-pytorch-2020-09-13-06-33-58-268\",\n",
+      "    \"job_name\": \"sagemaker-pytorch-2020-09-13-06-49-55-615\",\n",
       "    \"log_level\": 20,\n",
       "    \"master_hostname\": \"algo-1\",\n",
       "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"module_dir\": \"s3://sagemaker-us-east-2-478676226505/sagemaker-pytorch-2020-09-13-06-33-58-268/source/sourcedir.tar.gz\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-2-478676226505/sagemaker-pytorch-2020-09-13-06-49-55-615/source/sourcedir.tar.gz\",\n",
       "    \"module_name\": \"train\",\n",
       "    \"network_interface_name\": \"eth0\",\n",
       "    \"num_cpus\": 4,\n",
@@ -566,8 +573,8 @@
       "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
       "\u001b[34mSM_NUM_GPUS=1\u001b[0m\n",
       "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
-      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-2-478676226505/sagemaker-pytorch-2020-09-13-06-33-58-268/source/sourcedir.tar.gz\u001b[0m\n",
-      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"epochs\":100,\"hidden_dim\":40,\"input_features\":3,\"output_dim\":1},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-pytorch-2020-09-13-06-33-58-268\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-2-478676226505/sagemaker-pytorch-2020-09-13-06-33-58-268/source/sourcedir.tar.gz\",\"module_name\":\"train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":1,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"train.py\"}\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-2-478676226505/sagemaker-pytorch-2020-09-13-06-49-55-615/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"epochs\":100,\"hidden_dim\":40,\"input_features\":3,\"output_dim\":1},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-pytorch-2020-09-13-06-49-55-615\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-2-478676226505/sagemaker-pytorch-2020-09-13-06-49-55-615/source/sourcedir.tar.gz\",\"module_name\":\"train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":1,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"train.py\"}\u001b[0m\n",
       "\u001b[34mSM_USER_ARGS=[\"--epochs\",\"100\",\"--hidden_dim\",\"40\",\"--input_features\",\"3\",\"--output_dim\",\"1\"]\u001b[0m\n",
       "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
       "\u001b[34mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
@@ -684,14 +691,14 @@
       "\u001b[34mEpoch: 98, Loss: 0.3490504984344755\u001b[0m\n",
       "\u001b[34mEpoch: 99, Loss: 0.33642600902489256\u001b[0m\n",
       "\u001b[34mEpoch: 100, Loss: 0.3202252004827772\u001b[0m\n",
-      "\u001b[34m2020-09-13 06:38:09,706 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
+      "\u001b[34m2020-09-13 06:54:09,058 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
       "\n",
-      "2020-09-13 06:38:20 Uploading - Uploading generated training model\n",
-      "2020-09-13 06:38:20 Completed - Training job completed\n",
-      "Training seconds: 100\n",
-      "Billable seconds: 100\n",
-      "CPU times: user 614 ms, sys: 41.1 ms, total: 655 ms\n",
-      "Wall time: 4min 43s\n"
+      "2020-09-13 06:54:18 Uploading - Uploading generated training model\n",
+      "2020-09-13 06:54:18 Completed - Training job completed\n",
+      "Training seconds: 101\n",
+      "Billable seconds: 101\n",
+      "CPU times: user 641 ms, sys: 7.02 ms, total: 648 ms\n",
+      "Wall time: 4min 42s\n"
      ]
     }
    ],
@@ -719,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +741,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-"
+      "---------------!CPU times: user 441 ms, sys: 25.8 ms, total: 467 ms\n",
+      "Wall time: 7min 32s\n"
      ]
     }
    ],
@@ -772,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,18 +810,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'predict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-e9b96821b273>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# First: generate predicted, class labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtest_y_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'predict'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed!\n"
      ]
     }
    ],
@@ -833,9 +837,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "\n",
+      "Predicted class labels: \n",
+      "[1. 1. 1. 1. 1. 1. 0. 0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 1. 0. 1. 0. 1. 1. 0.\n",
+      " 0.]\n",
+      "\n",
+      "True class labels: \n",
+      "[1 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Second: calculate the test accuracy\n",
     "accuracy = None\n",
@@ -891,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,9 +930,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ResponseMetadata': {'RequestId': 'B7B1753924BE8C51',\n",
+       "   'HostId': '5LFOUw8hWP3Pldihwica3oy82nlGqiAqPwMfS5tf2ekNovIhmzkMGkXsencOVbPNz0cmlshgOgo=',\n",
+       "   'HTTPStatusCode': 200,\n",
+       "   'HTTPHeaders': {'x-amz-id-2': '5LFOUw8hWP3Pldihwica3oy82nlGqiAqPwMfS5tf2ekNovIhmzkMGkXsencOVbPNz0cmlshgOgo=',\n",
+       "    'x-amz-request-id': 'B7B1753924BE8C51',\n",
+       "    'date': 'Sun, 13 Sep 2020 07:02:11 GMT',\n",
+       "    'connection': 'close',\n",
+       "    'content-type': 'application/xml',\n",
+       "    'transfer-encoding': 'chunked',\n",
+       "    'server': 'AmazonS3'},\n",
+       "   'RetryAttempts': 0},\n",
+       "  'Deleted': [{'Key': 'plagiarism-detection-project/sagemaker-pytorch-2020-09-13-06-49-55-615/output/model.tar.gz'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-09-13-06-24-14-128/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism-detection-project/sagemaker-pytorch-2020-09-13-06-49-55-615/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-09-13-06-39-10-661/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism-detection-project/sagemaker-pytorch-2020-09-13-06-33-58-268/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-09-13-06-33-58-268/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-09-13-06-49-55-615/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-09-13-06-19-31-395/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-09-13-06-28-28-687/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-09-13-06-54-37-902/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism-detection-project/sagemaker-pytorch-2020-09-13-06-33-58-268/output/model.tar.gz'},\n",
+       "   {'Key': 'plagiarism-detection-project/train.csv'},\n",
+       "   {'Key': 'plagiarism-detection-project/test.csv'}]}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# deleting bucket, uncomment lines below\n",
     "\n",
@@ -953,9 +1006,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_latest_p36",
+   "display_name": "conda_pytorch_p36",
    "language": "python",
-   "name": "conda_pytorch_latest_p36"
+   "name": "conda_pytorch_p36"
   },
   "language_info": {
    "codemirror_mode": {
