--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -893,7 +893,7 @@
    "metadata": {},
    "source": [
     "** Answer**: \n",
-    " The model predicted quite well and there are no "
+    " The model predicted quite well and there are no false postives and false negatives. If there any, it might be due improper vectorisation of both the inputs"
    ]
   },
   {
